@@ -2,12 +2,13 @@
 
 0.126 "Demon Sweat"
  420618 Decode in a worker thread so the GUI and network don't freeze (Calin Culanu)
- 423376 Status Bar's "tasks" button should toggle the task pane (Walt)
+ 423376 Status Bar's "tasks" and "log" buttons should toggle the windows (Walt)
  411446 Use `Message-ID' rather than `Message-Id' when posting. (Charles)
  411447 Header pane loses selection when deleting articles (Jeff Berman)
  411657 Post window's cursor appears in the wrong place (Frank Tabor)
  411659 saving a second draft confuses the post window's file dialog (Charles)
  411959 profile's `Reply-To' header not used in posting dialog (Mimi Doucet)
+ 423684 Latest glib is issuing "memory warnings" when pan is starting-up (SciFi)
 
 0.125 "Potzrebie"
  408767 connection-limit change not recognized until restart (Chuck)
